# ipyslurm

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  MARCC.md  README.md  RELEASE.md  environment.yml  pyproject.toml  setup.cfg  setup.py  slurm.py
.github/workflows/: ipyslurm.yml  main.yml
examples/: 01_basic.ipynb  01_basics.ipynb  02_magics.ipynb  03_advanced.ipynb  advanced.ipynb  magics.ipynb  slurm.ipynb  tutorial.ipynb
ipyslurm/: __init__.py  client.py  ipyslurm.py  magic.py  progress.py  sftp.py  slurm.py  ssh.py  util.py  version.py
